flexoffice-test/frontend/flex-app/flex-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-test-app
  namespace: flex-test-app
  labels:
    app: flex-test-app
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flex-test-app
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-test-app
    spec:
      imagePullSecrets:
      - name: github-secret
      containers:
      - name: flex-test-app
        image: ghcr.io/jonastschumi/flexoffice_flex-app:p0.0.46
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
