flexoffice-test/frontend/flex-app/flex-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-test-app
  namespace: flex-test-app
spec:
  selector:
    app: flex-test-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
