flexoffice-test/frontend/flex-app/flex-app-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-test-app-http
  namespace: flex-test-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: flex-test-app-redirectscheme@kubernetescrd
spec:
  rules:
    - host: "app.flex.test.tschumi.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flex-test-app
                port:
                  number: 80
